# suldokars_wake_tools

./: .gitignore  CHANGELOG.md  LICENSE  MOBILE_RELEASE.md  MOBILE_SETUP.md  NOTICE  PRE_RELEASE_PLAN.md  README.md  RELEASING.md  build.sh  package-lock.json  package.json  run-android-device.command  run-android-sim.command  run-desktop.command  run-ios-device.command  run-ios-sim.command
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: desktop.json  mobile.json
backend/icons/: icon.icns
backend/ios-extras/: PrivacyInfo.xcprivacy  README.md
backend/src/: lib.rs  main.rs
frontend/: .prettierignore  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: tauri.ts
frontend/src/lib/components/: index.ts
frontend/src/lib/components/character/: AdvancementModal.svelte  AdvancementPanel.svelte  HarmMeter.svelte  (+10 more)
frontend/src/lib/data/: armor.ts  backgrounds.ts  formulae.ts  gear.ts  implants.ts  index.ts  keywords.ts  kits.ts  languages.test.ts  languages.ts  lifeFormTables.ts  lifeforms.ts  pets.ts  starterFunds.test.ts  starterFunds.ts  subspaceFormulae.ts  typeGraphs.test.ts  typeGraphs.ts  types.ts  vehicles.ts  weapons.ts
frontend/src/lib/models/: Enums.test.ts  Enums.ts  SWCharacter.test.ts  SWCharacter.ts  index.ts
frontend/src/lib/stores/: characters.svelte.ts  database.ts  index.ts  ui.svelte.ts
frontend/src/lib/utils/: advancement.test.ts  advancement.ts  computed.test.ts  computed.ts  dice.test.ts  dice.ts  equipment.test.ts  equipment.ts  formulae.test.ts  formulae.ts  graphLibrary.test.ts  graphLibrary.ts  importExport.test.ts  importExport.ts  index.ts  rollAnimation.test.ts  rollAnimation.ts  updater.ts  zoom.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/dice/: +page.svelte
frontend/src/routes/reference/: +page.svelte
frontend/src/routes/settings/: +page.svelte
scripts/: find-free-port.cjs  launch-dev.sh  release-mac.sh
(+27 files in other folders)
