[package]
name = "sw-tools-backend"
version = "0.0.2"
description = "Suldokar's Wake Tools - SW character manager backend"
authors = ["Alexander Saint Clair Bardelmeier <alexanderstclair@zoho.com>"]
license = "MIT"
repository = "https://github.com/spoonpaw/suldokars_wake_tools"
edition = "2021"

[lib]
name = "sw_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
rand = "0.8"

# Desktop-only plugins (shell + updater are unavailable on iOS / Android —
# mobile gets updates through the App Store / Play Store).
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
